welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:8: error: value =< is not a member of Int
    if (max2=<max1){
            ^